# zkryptium

./: .gitignore  Cargo.toml  README.md  times_prime_nums
.github/workflows/: rust.yml
examples/: bbsplus.rs  bbsplus2.rs  bbsplus_blind.rs  bbsplus_nym.rs  cl03.rs  cl03_multiattr.rs
fixture_data/bls12-381-sha-256/: MapMessageToScalarAsHash.json  generators.json
fixture_data/fixture_data_blind/bls12-381-sha-256/: generators.json
fixture_data/fixture_data_blind/bls12-381-sha-256/commit/: commit001.json
fixture_data/fixture_data_blind/bls12-381-sha-256/signature/: signature001.json  signature003.json
fixture_data/fixture_data_nym/bls12-381-sha-256/: generators.json
fixture_data/fixture_data_nym/bls12-381-sha-256/nymCommit/: nymCommit001.json  nymCommit002.json  nymCommit003.json  nymCommit004.json
fixture_data/fixture_data_nym/bls12-381-sha-256/nymProof/: nymProof001.json  nymProof002.json  nymProof003.json  nymProof004.json  nymProof005.json  nymProof006.json  nymProof007.json  nymProof101.json  nymProof102.json  nymProof103.json  nymProof104.json
fixture_data/fixture_data_nym/bls12-381-sha-256/nymSignature/: nymSignature001.json  nymSignature002.json  nymSignature003.json  nymSignature004.json  nymSignature005.json  nymSignature006.json
fixture_data/fixture_data_nym/bls12-381-shake-256/: generators.json
fixture_data/fixture_data_nym/bls12-381-shake-256/nymCommit/: nymCommit001.json  nymCommit002.json  nymCommit003.json  nymCommit004.json
fixture_data/fixture_data_nym/bls12-381-shake-256/nymProof/: nymProof001.json  nymProof002.json  nymProof003.json  nymProof004.json  nymProof005.json  nymProof006.json  nymProof007.json  nymProof101.json  nymProof102.json  nymProof103.json  nymProof104.json
fixture_data/fixture_data_nym/bls12-381-shake-256/nymSignature/: nymSignature001.json  nymSignature002.json  nymSignature003.json  nymSignature004.json  nymSignature005.json  nymSignature006.json
fixture_data_blind/bls12-381-sha-256/commit/: commit002.json
fixture_data_blind/bls12-381-sha-256/signature/: signature002.json
fixture_data_blind/bls12-381-shake-256/: generators.json
fixture_data_blind/bls12-381-shake-256/commit/: commit001.json  commit002.json
fixture_data_nym/bls12-381-sha-256/nymCommit/: nymCommit001.json  nymCommit002.json
fixture_data_nym/bls12-381-shake-256/nymCommit/: nymCommit002.json
fixture_data_nym/bls12-381-shake-256/nymSignature/: nymSignature003.json
fixture_data_old/: README.md
fixtures/bls12-381-sha-256/: keyPair.json
fixtures/bls12-381-shake-256/: keyPair.json
src/: errors.rs  lib.rs  main.rs  tests.rs
src/algorithms/: CL03.rs  mod.rs
src/bbsplus/: blind.rs  ciphersuites.rs  commitment.rs  generators.rs  keys.rs  message.rs  mod.rs  proof.rs  pseudonym.rs  signature.rs  tests.rs
src/cl03/: bases.rs  blind.rs  ciphersuites.rs  commitment.rs  keys.rs  mod.rs  proof.rs  range_proof.rs  sigma_protocols.rs  signature.rs  tests.rs
src/keys/: bbsplus_key.rs  cl03_key.rs  key.rs  mod.rs  pair.rs  traits.rs  type_.rs
src/schemes/: algorithms.rs  generics.rs  mod.rs
src/signatures/: blind.rs  commitment.rs  mod.rs  proof.rs  prova.rs  signature.rs
src/utils/: message.rs  mod.rs  random.rs  util.rs
tests/: bbsplus.rs  cl03.rs
