[package]
name = "zkryptium"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
authors = ["LINKS Foundation"]
description = "Rust crypto library for zero-knowledge proofs"
repository = "https://github.com/Cybersecurity-LINKS/zkryptium"
rust-version = "1.65"
keywords = [ "crypto", "signatures", "zero-knowledge", "bbs", "blind-signature" ]
categories = [ "cryptography", "authentication" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5"}
zeroize = { version = "1.8.1" }
serde = { version = "1.0.25", default-features = false, features = ["derive", "serde_derive"] }
serde_json = "1.0.59"
hex = "0.4.3"
thiserror = "1.0.30"

# cl03
rug = { version = "1.27.0", features = ["serde"], optional = true }
rand_chacha = { version = "0.9.0", optional = true }


sha3 = "0.10.8"
sha2 = "0.10.6"
hkdf = "0.12.3"
digest = "0.10.6"

# bbsplus
bls12_381_plus = { version = "0.8.13", optional = true }
ff = "0.13.0"
group = "0.10"
elliptic-curve = "0.13.4"


log = "0.4.0"
env_logger = "0.10.0"
dotenvy = "0.15.7"



[lib]
name = "zkryptium"
path = "src/lib.rs"

[features]
default = ["bbsplus", "bbsplus_blind"]
cl03 = ["dep:rug", "dep:rand_chacha"]
bbsplus = ["dep:bls12_381_plus"]
bbsplus_blind = ["bbsplus"]


[[example]]
name = "bbsplus_blind"
path = "examples/bbsplus_blind.rs"
required-features = ["bbsplus", "bbsplus_blind"]

[[example]]
name = "bbsplus"
path = "examples/bbsplus.rs"
required-features = ["bbsplus"]

[[example]]
name = "cl03"
path = "examples/cl03.rs"
required-features = ["cl03"]
