[package]
name = "zkryptium"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
authors = ["LINKS Foundation"]
description = "Rust crypto library for zero-knowledge proofs"
repository = "https://github.com/Cybersecurity-LINKS/zkryptium"
rust-version = "1.65"
keywords = [ "crypto", "signatures", "zero-knowledge", "bbs", "blind-signature"]
categories = [ "cryptography", "authentication" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5"}
serde = { version = "1.0.25", default-features = false, features = ["derive", "serde_derive"] }
serde_json = "1.0.59"
hex = "0.4.3"
thiserror = "2.0.12"

# cl03
rug = { version = "1.27.0", features = ["serde"], optional = true }
rand_chacha = { version = "0.9.0", optional = true }

sha3 = "0.10.8"
sha2 = "0.10.6"
digest = "0.10.6"

# bbsplus
bls12_381_plus = { version = "0.8.13", optional = true }
ff = "0.13.1"
group = "0.13.0"
elliptic-curve = "0.13.4"

[dev-dependencies]
log = "0.4.0"
env_logger = "0.11.8"
dotenvy = "0.15.7"

[lib]
name = "zkryptium"
path = "src/lib.rs"

[features]
default = ["bbsplus", "bbsplus_blind", "bbsplus_nym"]
cl03 = ["dep:rug", "dep:rand_chacha"]
bbsplus = ["dep:bls12_381_plus"]
bbsplus_blind = ["bbsplus"]
bbsplus_nym = ["bbsplus", "bbsplus_blind"]

[[example]]
name = "bbsplus_blind"
path = "examples/bbsplus_blind.rs"
required-features = ["bbsplus", "bbsplus_blind"]

[[example]]
name = "bbsplus_nym"
path = "examples/bbsplus_nym.rs"
required-features = ["bbsplus", "bbsplus_blind", "bbsplus_nym"]

[[example]]
name = "bbsplus"
path = "examples/bbsplus.rs"
required-features = ["bbsplus"]

[[example]]
name = "cl03"
path = "examples/cl03.rs"
required-features = ["cl03"]
